--- a/config.ini.example
+++ b/config.ini.example
@@ -1,8 +1,11 @@
-[General]
-# The status message for the bot. This will be displayed in the bot's status and in the terminal running the bot.
-StatusMessage = A locally-run Vivia instance!
+# The status message for the bot. This will be shown in the terminal when running the bot as well.
+statusmessage = Statuses have moved to data/statuses.json
+# The ID for the bot's "owner" (the person who created/is running the bot).
+# Replace this with your Discord user ID, otherwise advanced commands will not run.
+owner = 0
 # The command prefix for the bot.
-Prefix = v!
+# This will be used for more advanced commands such as sync.
+prefix = v!
 
 [Channels]
 # The ID for the channel where logs are sent. Must be a text channel in a server that the bot is in, and the bot must be able to send messages in it.
