--- a/commands/template.py.example
+++ b/commands/template.py.example
@@ -22,7 +22,7 @@ async def setup(bot: commands.Bot): # for extension loading
     @commands.hybrid_command(
         name = "command name"
     )
-    async def command(ctx: app_commands.Context):
+    async def command(ctx: commands.Context):
         ...
     
     with optional decorators:
