--- a/commands/template.py.example
+++ b/commands/template.py.example
@@ -15,6 +15,7 @@
 
 from discord.ext import commands
 from discord import app_commands
+# Add any additional imports you may need in here
 
 async def setup(bot: commands.Bot): # for extension loading
     bot.add_command(command) # type: ignore
