--- a/data/personalityMessages/reason.json
+++ b/data/personalityMessages/reason.json
@@ -2,6 +2,7 @@
     "messages": [
         "The reason for this {action} is: {reason}",
         "The moderators have described the reason for this {action} as: \n`{reason}`",
-        "The reason for this {action} is: \n`{reason}`"
+        "The reason for this {action} is: \n`{reason}`",
+        "The attached reason for this {action} is: \n`{reason}`"
     ]
 }
