Been a bit since a major Vivia version huh (also first prerelease version nice)

--- a/data/personalityMessages/moderation/reason.json
+++ b/data/personalityMessages/moderation/reason.json
@@ -1,6 +1,6 @@
 {
     "messages": [
-        "The reason for this {action} is: {reason}",
+        "The reason for this {action} is: \n`{reason}`",
         "The moderators have described the reason for this {action} as: \n`{reason}`",
         "The reason for this {action} is: \n`{reason}`",
         "The attached reason for this {action} is: \n`{reason}`"
