Give a default message to all personality messages, fix v!level

--- a/data/personalityMessages/moderation/reason.json
+++ b/data/personalityMessages/moderation/reason.json
@@ -1,4 +1,5 @@
 {
+    "default": "Reason: `{reason}`",
     "messages": [
         "The reason for this {action} is: \n`{reason}`",
         "The moderators have described the reason for this {action} as: \n`{reason}`",
