--- a/commands/template.py.example
+++ b/commands/template.py.example
@@ -18,7 +18,7 @@ import discord
 from discord import app_commands
 from discord.ext import commands
 # Add any additional imports you may need in here
-# ex: from extras.viviatools import personalityMessage, blockInDMs
+# ex: from extras.viviatools import personality_message, block_in_dms
 
 async def setup(bot: commands.Bot): # Add your commands here
     bot.add_cog("cog_name")
